--- a/display_image.ipynb
+++ b/display_image.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "display_image.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP3FI7iGUyiMCjNJCHdIzs+",
+      "authorship_tag": "ABX9TyNYbp/1qxbQju7ZBwI61JQJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,6 +64,29 @@
       ],
       "execution_count": 43,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vrnd8C_R4U08",
+        "outputId": "0723a0c8-691f-4495-f58a-ce9a4dd4512f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(dataset.RasterCount)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
