--- a/display_image.ipynb
+++ b/display_image.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "display_image.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNYbp/1qxbQju7ZBwI61JQJ",
+      "authorship_tag": "ABX9TyNldWJcYvEis68qUCLBGFHK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,6 +53,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "LHvPaJ7OEZsA"
+      },
+      "source": [
+        "import pandas as pd"
+      ],
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "UxZ6UxwTyJMR"
       },
       "source": [
@@ -68,11 +79,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vrnd8C_R4U08",
-        "outputId": "0723a0c8-691f-4495-f58a-ce9a4dd4512f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vrnd8C_R4U08",
+        "outputId": "0723a0c8-691f-4495-f58a-ce9a4dd4512f"
       },
       "source": [
         "print(dataset.RasterCount)"
@@ -151,9 +162,234 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D5n37DgqBY0u"
+      },
+      "source": [
+        "### Read Labels"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "xYs37N8iyiuG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xYs37N8iyiuG",
+        "outputId": "d5d303db-84dd-4198-d071-07a2e3bb4b52"
+      },
+      "source": [
+        "import json\n",
+        "\n",
+        "# open json file\n",
+        "with open('xView_train.geojson', 'r') as file:\n",
+        "  data = json.loads(file.read())\n",
+        "\n",
+        "print(type(data))"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'dict'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "naPOXvfp-7Qg",
+        "outputId": "a98eecf1-216b-471f-f326-672fb0afa2c5"
+      },
+      "source": [
+        "print(data.keys())"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "dict_keys(['crs', 'type', 'features', 'name'])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HtH6fQDyBr3L",
+        "outputId": "beceded4-5f31-49fe-99cb-cfabdb062a57"
+      },
+      "source": [
+        "print(data['features'][0])"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'type': 'Feature', 'properties': {'bounds_imcoords': '2712,1145,2746,1177', 'edited_by': 'wwoscarbecerril', 'cat_id': '1040010028371A00', 'type_id': 73, 'ingest_time': '2017/07/24 12:49:09.118+00', 'index_right': 2356, 'image_id': '2355.tif', 'point_geom': '0101000020E6100000616E4E6406A256C03BE6ADA0D6212D40', 'feature_id': 374410, 'grid_file': 'Grid2.shp'}, 'geometry': {'type': 'Polygon', 'coordinates': [[[-90.53169885094464, 14.56603647302396], [-90.53169885094464, 14.56614473506768], [-90.53158140073565, 14.56614473506768], [-90.53158140073565, 14.56603647302396], [-90.53169885094464, 14.56603647302396]]]}}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8XfNxB7xCQS0"
+      },
+      "source": [
+        "df_json = pd.DataFrame(data['features'])"
+      ],
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 355
+        },
+        "id": "-RFyuYI1D7lF",
+        "outputId": "2189111b-9059-4b55-9a73-c0d4ed8458e2"
+      },
+      "source": [
+        "df_json.head(10)"
+      ],
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>type</th>\n",
+              "      <th>properties</th>\n",
+              "      <th>geometry</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Feature</td>\n",
+              "      <td>{'bounds_imcoords': '2712,1145,2746,1177', 'ed...</td>\n",
+              "      <td>{'type': 'Polygon', 'coordinates': [[[-90.5316...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Feature</td>\n",
+              "      <td>{'bounds_imcoords': '2720,2233,2760,2288', 'ed...</td>\n",
+              "      <td>{'type': 'Polygon', 'coordinates': [[[-90.5316...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Feature</td>\n",
+              "      <td>{'bounds_imcoords': '2687,1338,2740,1399', 'ed...</td>\n",
+              "      <td>{'type': 'Polygon', 'coordinates': [[[-90.5317...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Feature</td>\n",
+              "      <td>{'bounds_imcoords': '2691,1201,2730,1268', 'ed...</td>\n",
+              "      <td>{'type': 'Polygon', 'coordinates': [[[-90.5317...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Feature</td>\n",
+              "      <td>{'bounds_imcoords': '2671,838,2714,869', 'edit...</td>\n",
+              "      <td>{'type': 'Polygon', 'coordinates': [[[-90.5318...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Feature</td>\n",
+              "      <td>{'bounds_imcoords': '2705,1181,2738,1206', 'ed...</td>\n",
+              "      <td>{'type': 'Polygon', 'coordinates': [[[-90.5317...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>Feature</td>\n",
+              "      <td>{'bounds_imcoords': '2709,1014,2747,1072', 'ed...</td>\n",
+              "      <td>{'type': 'Polygon', 'coordinates': [[[-90.5317...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>Feature</td>\n",
+              "      <td>{'bounds_imcoords': '2671,808,2733,866', 'edit...</td>\n",
+              "      <td>{'type': 'Polygon', 'coordinates': [[[-90.5318...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Feature</td>\n",
+              "      <td>{'bounds_imcoords': '2700,353,2731,384', 'edit...</td>\n",
+              "      <td>{'type': 'Polygon', 'coordinates': [[[-90.5317...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>Feature</td>\n",
+              "      <td>{'bounds_imcoords': '2704,2123,2749,2151', 'ed...</td>\n",
+              "      <td>{'type': 'Polygon', 'coordinates': [[[-90.5317...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      type  ...                                           geometry\n",
+              "0  Feature  ...  {'type': 'Polygon', 'coordinates': [[[-90.5316...\n",
+              "1  Feature  ...  {'type': 'Polygon', 'coordinates': [[[-90.5316...\n",
+              "2  Feature  ...  {'type': 'Polygon', 'coordinates': [[[-90.5317...\n",
+              "3  Feature  ...  {'type': 'Polygon', 'coordinates': [[[-90.5317...\n",
+              "4  Feature  ...  {'type': 'Polygon', 'coordinates': [[[-90.5318...\n",
+              "5  Feature  ...  {'type': 'Polygon', 'coordinates': [[[-90.5317...\n",
+              "6  Feature  ...  {'type': 'Polygon', 'coordinates': [[[-90.5317...\n",
+              "7  Feature  ...  {'type': 'Polygon', 'coordinates': [[[-90.5318...\n",
+              "8  Feature  ...  {'type': 'Polygon', 'coordinates': [[[-90.5317...\n",
+              "9  Feature  ...  {'type': 'Polygon', 'coordinates': [[[-90.5317...\n",
+              "\n",
+              "[10 rows x 3 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8hqniR2qExeE"
       },
       "source": [
         ""
